--- a/src/components/language-switcher/language-switcher.css
+++ b/src/components/language-switcher/language-switcher.css
@@ -28,6 +28,7 @@
 }
 
 .krds-language-switcher-icon {
+  display: block;
   width: 1.8rem;
   height: 1.8rem;
   color: var(--krds-light-color-icon-gray);
