--- a/src/components/tts/tts.css
+++ b/src/components/tts/tts.css
@@ -37,6 +37,7 @@
 }
 
 .krds-tts-icon {
+  display: block;
   width: 2rem;
   height: 2rem;
   flex-shrink: 0;
